fix(material/mdc-form-field): text-field should stretch based on host element (#18778)
Currently the MDC text-field uses `inline-flex` but does not expand
to the width of the form-field host element. We want the text-field
to be based on the actual form-field host element as it makes it easier
for developers to control the width of form-fields. i.e. adding
`display: block`, or specifying a maximum width.

--- a/src/material-experimental/mdc-form-field/form-field.scss
+++ b/src/material-experimental/mdc-form-field/form-field.scss
@@ -38,6 +38,12 @@
   width: 100%;
 }
 
+// The MDC text-field should stretch to the width of the host `<mat-form-field>` element.
+// This allows developers to control the width without needing custom CSS overrides.
+.mat-mdc-text-field-wrapper {
+  width: 100%;
+}
+
 // Infix that contains the projected content (usually an input or a textarea). We ensure
 // that the projected form-field control and content can stretch as needed, but we also
 // apply a default infix width to make the form-field's look natural.
